--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 debug=false
 management.endpoints.web.exposure.include=*
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
 
 
-server.port = 8090
+server.port = 8080
